# gravity

./: .dir-locals.el  .gitignore  CMakeLists.txt  build.sh  conanfile.txt  imgui.ini  notes.org  todo.org  vcpkg.json
include/: readme.txt
lib/: readme.txt
src/: .clang-format  main.cpp  rock.cpp  rock.h  rock.hpp  tree.hpp  util.cpp  util.h  world.cpp  world.hpp
tst/: readme.txt  tests.cpp
